crates/tsuno-driver/tests/fixtures/snapshots/pass/allows_vec_initial_state.rs
fn allows_vec_initial_state(xs: Vec<i32>) {
    //@ assert true;
}

fn main() {}
